--- a/notes-pr/client/index.html
+++ b/notes-pr/client/index.html
@@ -19,5 +19,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+      src="//code.tidio.co/8e9cmbyvxzzhlum0tuufz2vhjvchpjo9.js"
+      async
+    ></script>
   </body>
 </html>
